--- a/game.css
+++ b/game.css
@@ -388,5 +388,9 @@ ul{
         position: absolute;
         top:25vh;
     }
+    .in-main{
+        position:absolute;
+        top:2vh;
+    }
     
 }
