--- a/game.css
+++ b/game.css
@@ -2,6 +2,7 @@
     padding:0;
     margin:0;
     box-sizing: border-box;
+    overflow: hidden;
 }
 
 body{
@@ -11,6 +12,7 @@ body{
     display: flex;
     align-items: center;
     flex-direction: column;
+    overflow: hidden;
     
 }
 .header{
